# rust-bash

./: .gitignore  AGENTS.md  AGENTS.npm.md  Cargo.toml  README.md  cbindgen.toml  package-lock.json
.github/actions/setup-env/: action.yml
.github/workflows/: ci.yml  deploy-website.yml  npm-publish.yml
docs/guidebook/: 01-what-we-are-building.md  02-architecture-overview.md  03-parsing-layer.md  04-interpreter-engine.md  05-virtual-filesystem.md  06-command-system.md  07-execution-safety.md  08-integration-targets.md  09-testing-strategy.md  10-implementation-plan.md  README.md
docs/plans/: M1.md  M2.md  M3.md  M4.md  M5.1.md  M5.2.md  M5.34.md  M6.12.md  M6.12.tests.md  M6.md  M7.md  oils-tests.md
docs/recipes/: README.md  ai-agent-tool.md  cli-usage.md  convenience-api.md  custom-commands.md  error-handling.md  execution-limits.md  ffi-usage.md  filesystem-backends.md  getting-started.md  mcp-server.md  migrating-from-just-bash.md  multi-step-sessions.md  network-access.md  npm-package.md  shell-scripting.md  text-processing.md  wasm-usage.md
examples/: shell.rs
examples/ffi/go/: README.md  go.mod  main.go
examples/ffi/python/: README.md  rust_bash_example.py
examples/website/: .gitignore  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  wrangler.toml
examples/website/e2e/: website.spec.ts
examples/website/functions/api/: chat.test.mts  chat.ts
examples/website/functions/api/chat/: completions.ts
examples/website/public/: _headers
examples/website/src/: agent.test.mts  agent.ts  bash-loader.ts  cached-initial-response.test.mts  cached-initial-response.ts  content.ts  index.html  main.ts  styles.css  terminal.ts  wasm-mock.ts
include/: rust_bash.h
pkg/: rust_bash.d.ts  rust_bash.js  rust_bash_bg.js  rust_bash_bg.wasm.d.ts
scripts/: build-wasm.sh  check-version-sync.sh  generate-content.mjs  publish-npm.sh  publish.sh  stage-native-addon.sh  version.sh
src/: api.rs  error.rs  ffi.rs  lib.rs  main.rs  mcp.rs  network.rs  parser_smoke_tests.rs  platform.rs  shell_bytes.rs  wasm.rs
src/commands/: compression.rs  diff_cmd.rs  exec_cmds.rs  file_ops.rs  jq_cmd.rs  mod.rs  navigation.rs  net.rs  regex_util.rs  sed.rs  test_cmd.rs  text.rs  utils.rs
src/commands/awk/: lexer.rs  mod.rs  parser.rs  runtime.rs
src/interpreter/: arithmetic.rs  brace.rs  builtins.rs  expansion.rs  mod.rs  pattern.rs  walker.rs
src/vfs/: memory.rs  mod.rs  mountable.rs  mountable_tests.rs  overlay.rs  overlay_tests.rs  readwrite.rs  readwrite_tests.rs  tests.rs
tests/: cli.rs  comparison.rs  ffi.rs  filesystem_backends.rs  help_flag.rs  integration.rs  oils_spec.rs  spec_tests.rs
tests/common/: mod.rs  oils_format.rs  oils_helpers.rs
tests/fixtures/comparison/: basic_echo.toml  read_builtin.toml
tests/fixtures/comparison/arrays/: basic.toml  pipestatus_bash_rematch.toml
tests/fixtures/comparison/builtins/: detection.toml  dirs_aliases.toml  input_state.toml
tests/fixtures/comparison/control_flow/: case.toml  for_loop.toml  if_then.toml  logical_operators.toml  while_loop.toml
tests/fixtures/comparison/declare/: attributes.toml
tests/fixtures/comparison/expansion/: arithmetic.toml  brace.toml  command_substitution.toml  parameter_default.toml  parameter_substitution.toml  tilde.toml
tests/fixtures/comparison/functions/: basic_functions.toml
tests/fixtures/comparison/globbing/: basic_glob.toml
tests/fixtures/comparison/here_documents/: heredoc.toml
tests/fixtures/comparison/parameter_transforms/: basic.toml
tests/fixtures/comparison/paths/: path_fidelity.toml
tests/fixtures/comparison/pipes/: basic_pipe.toml
tests/fixtures/comparison/process_substitution/: basic.toml
tests/fixtures/comparison/quoting/: basic_quoting.toml
tests/fixtures/comparison/read/: flags.toml
tests/fixtures/comparison/redirections/: advanced.toml  basic_redirect.toml
tests/fixtures/comparison/set_options/: basic.toml
tests/fixtures/comparison/shopt/: basic.toml
tests/fixtures/comparison/special_vars/: basic.toml  call_stack.toml
tests/fixtures/comparison/word_splitting/: ifs.toml
tests/fixtures/oils/: PROVENANCE  pass-list.txt  strict-options.test.sh  todo.txt  var-op-strip.test.sh
tests/fixtures/oils/testdata/: bash-source-pushtemp.sh  return-helper.sh  top-level-control-flow.sh
tests/fixtures/spec/: basic_commands.toml
tests/fixtures/spec/awk/: arithmetic.toml  builtins.toml  fields.toml  patterns.toml
tests/fixtures/spec/grep/: basic.toml  flags.toml  regex.toml
tests/fixtures/spec/jq/: basic.toml  filters.toml  types.toml
tests/fixtures/spec/sed/: addresses.toml  commands.toml  substitution.toml
tests/snapshots/: integration__export_output.snap  integration__ls_long.snap  integration__ls_long_all.snap  integration__set_output.snap
